fix root horizontal overflow

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3834,6 +3834,10 @@ body[dir="rtl"] .checkbox:checked,
   padding: 2.5rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -4235,6 +4239,11 @@ body[dir="rtl"] .checkbox:checked,
   .md\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:pl-6 {
